0.2.2:

0.2.1:
  - Ruby1.9 compatible.
  - Fixed issue #16 (deep arrays nesting).
  - Support for v201103 and v201104.
  - Require google-ads-common 0.4.0 or later from now on.

0.2.0:
  - Require google-ads-common 0.3.0 or later from now on.
  - Support for Savon backend 0.9.1.

0.1.1:
  - Exception generation and error handling.
  - DFP API v201101 support.

0.1.0:
  - Initial version with minimal functionality.